kubernetes/vehicle-rental-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-rental-service
  namespace: vehicle-rental-system
  labels:
    app: vehicle-rental-service
    version: "v1.0.0"
spec:
  selector:
    app: vehicle-rental-service
  ports:
    - name: http
      protocol: TCP
      port: 1001
      targetPort: 8000
    - name: internal
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
